tests/expected_output/array_string_index/000001-clang-13.0-x86_64-pc-linux-gnu.txt
tests/compile_time_errors/array_string_index.c:3:3: error: array subscript is not an integer
        a["0"] = 0;
         ^~~~
dcc explanation: you are using a string as an array index. An array index has to be an integer.
